# hocg-fan-sim-prices

./: .gitignore  Cargo.toml  LICENSE  README.md  hocg_prices.json  other_history.json
cli/: Cargo.toml
cli/src/: lib.rs  main.rs  price_check.rs
hBD24/: hBD24-001_history.json  hBD24-002_history.json  hBD24-003_history.json  hBD24-004_history.json  hBD24-005_history.json  hBD24-006_history.json  hBD24-007_history.json  hBD24-008_history.json  hBD24-009_history.json  hBD24-010_history.json  hBD24-011_history.json  hBD24-012_history.json  hBD24-013_history.json  hBD24-014_history.json  hBD24-015_history.json  hBD24-016_history.json  hBD24-017_history.json  hBD24-018_history.json  hBD24-019_history.json  hBD24-020_history.json  hBD24-021_history.json  hBD24-022_history.json  hBD24-023_history.json  hBD24-024_history.json  hBD24-025_history.json  hBD24-026_history.json  hBD24-027_history.json  hBD24-028_history.json  hBD24-029_history.json  hBD24-030_history.json  hBD24-031_history.json  hBD24-032_history.json  hBD24-033_history.json  hBD24-034_history.json  hBD24-035_history.json  hBD24-036_history.json  hBD24-037_history.json  hBD24-038_history.json  hBD24-039_history.json  hBD24-040_history.json  (+23 more)
hBP01/: hBP01-001_history.json  hBP01-002_history.json  hBP01-003_history.json  hBP01-004_history.json  hBP01-005_history.json  hBP01-006_history.json  hBP01-007_history.json  hBP01-008_history.json  hBP01-009_history.json  hBP01-010_history.json  hBP01-011_history.json  hBP01-012_history.json  hBP01-013_history.json  hBP01-014_history.json  hBP01-015_history.json  (+111 more)
(+870 files in other folders)
