[workspace]
members = ["model", "cli"]
resolver = "3"


[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
hocg-fan-sim-prices-cli = { path = "cli", version = "*" }
hocg-fan-sim-prices-model = { path = "model", version = "*" }
hocg-fan-sim-assets-model = { git = "https://github.com/Qrimpuff/hocg-fan-sim-assets" }
clap = { version = "4.6.0", features = ["derive"] }
dotenvy = "0.15.7"
icu = "2.2.0"
indexmap = "2.13.0"
jiff = { version = "0.2.23", features = ["serde"] }
json-pretty-compact = "0.1.2"
parking_lot = "0.12.5"
rayon = "1.11.0"
reqwest = { version = "0.13.2", features = [
    "blocking",
    "json",
    "cookies",
    "gzip",
    "brotli",
    "deflate",
    "query",
] }
scraper = "0.26.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
